# Django-Rest-Framework

./: pyproject.toml
DRF/DRF/: settings.py  urls.py
DRF/students/: admin.py  models.py  serializers.py  urls.py  views.py
DRF/students/migrations/: 0001_initial.py  0002_alter_students_id_of_studnet.py  0003_alter_students_id_of_studnet.py  0004_rename_city_of_student_students_city_and_more.py  0005_alter_students_options_alter_students_batch.py
