[project]
name = "django-rest-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.10.0",
    "django==5.2.8",
    "django-filter==25.2",
    "djangorestframework==3.16.1",
    "markdown==3.10",
    "pygments==2.19.2",
    "sqlparse==0.5.3",
]
